--- a/Retrieval_Agent_LLama3.ipynb
+++ b/Retrieval_Agent_LLama3.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "os.environ['LANGCHAIN_TRACING_V2'] = 'True'\n",
     "os.environ['LANGCHAIN_ENDPOINT'] = 'https://api.smith.langchain.com/'\n",
-    "os.environ['LANGCHAIN_API_KEY'] = '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'\n"
+    "os.environ['LANGCHAIN_API_KEY'] = 'lsv2_##############"
    ]
   },
   {
@@ -67,8 +67,8 @@
     "]\n",
     "url = 'https://www.ai-jason.com/learning-ai/gpt5-llm'\n",
     "\n",
-    "docs = [FireCrawlLoader(api_key=\"fc-92da0e383e4943868bdfe0601d0cad6e\", url=url, mode=\"scrape\").load()]\n",
-    "#docs = [FireCrawlLoader(api_key=\"fc-92da0e383e4943868bdfe0601d0cad6e\", url=url, mode=\"scrape\").load() for url in urls]\n",
+    "docs = [FireCrawlLoader(api_key=\"fc-####################\", url=url, mode=\"scrape\").load()]\n",
+    "#docs = [FireCrawlLoader(api_key=\"fc-####################\", url=url, mode=\"scrape\").load() for url in urls]\n",
     "\n",
     "\n",
     "#split documents\n",
@@ -219,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['TAVILY_API_KEY'] = \"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\"\n",
+    "os.environ['TAVILY_API_KEY'] = \"tvly-#####################################\"\n",
     "from langchain_community.tools.tavily_search import TavilySearchResults\n",
     "web_search_tool = TavilySearchResults(k=3)"
    ]
